# learning-camera2

./: .gitignore  LICENSE  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/java/com/example/learning_camera2/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  learning-camera2-jni.cpp
app/src/main/cpp/wrapper/: camera_device.cpp  camera_device.h  camera_manager.cpp  camera_manager.h  log_internal.h
app/src/main/java/java/com/example/learning_camera2/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/java/com/example/learning_camera2/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
